<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- LOG IN AND SIGN UP ACTIVITIES -->
    <string name="you_are">You are :</string>
    <string name="client">Client</string>
    <string name="agent">Agent</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="name">Enter your name</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_already_log_in">You don\'t have an account ? Create it</string>

    <!-- ACTIVITY ADD PROPERTY -->
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="area">Area</string>
    <string name="number_of_rooms">Rooms</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="street_number">Street Number</string>
    <string name="street">Street</string>
    <string name="address">Address</string>
    <string name="available_or_sold">Sold :</string>
    <string name="add_property">Add Property</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="switch_on">Sold</string>
    <string name="switch_off">Available</string>
    <string name="register_date">Register Date</string>
    <string name="sold_date">Sold Date</string>
    <string name="cancel">Cancel</string>
    <string name="add_agent">Agent :</string>
    <string name="add_property_description">Description</string>
    <string name="update_property">Update Property</string>

    <!-- FRAGMENT ADD IMAGES -->
    <string name="name_your_picture">Name</string>
    <string name="describe_your_picture">Description</string>
    <string name="image_in_album">Choose in album</string>
    <string name="take_picture">Take a picture</string>
    <string name="save_picture">Save</string>
    <string name="first_picture">Define as first picture ?</string>

    <!-- AMENITIES CHECKBOX -->
    <string name="school">School</string>
    <string name="restaurants">Restaurants</string>
    <string name="playground">Playground</string>
    <string name="supermarket">Supermarket</string>
    <string name="shopping_area">Shopping Area</string>
    <string name="cinema">Cinema</string>

    <!-- PROPERTY DETAILS -->
    <string name="details_type">Type :</string>
    <string name="details_media">Media</string>
    <string name="details_description">Description</string>
    <string name="details_number_of_rooms">Number of rooms</string>
    <string name="details_area">Area</string>
    <string name="details_location">Location</string>
    <string name="details_rooms">Rooms</string>
    <string name="details_price">Price :</string>
    <string name="details_agent">Agent :</string>
    <string name="details_status">Status</string>
    <string name="details_available">Available</string>
    <string name="details_sold">Sold</string>
    <string name="details_near">Near</string>
    <string name="details_school">School</string>
    <string name="details_playground">Playground</string>
    <string name="details_restaurants">Restaurants</string>
    <string name="details_supermarket">Supermarket</string>
    <string name="details_shopping_area">Shopping Area</string>
    <string name="details_cinema">Cinema</string>
    <string name="details_address_with_number">%1$s - %2$s - %3$s</string>
    <string name="details_city">City</string>
    <string name="details_register_date">Register date :</string>
    <string name="details_sold_date">Sold date :</string>
    <string name="details_edit_property">Edit</string>

    <!-- PROPERTIES SEARCH -->
    <string name="search_toolbar_title">Search Properties</string>
    <string name="search_price_range_title">Price Range</string>
    <string name="search_type_chips_title">Type</string>
    <string name="search_proximity_chips_title">Proximity</string>
    <string name="search_area_range_title">Area Range</string>
    <string name="search_number_of_rooms_chips_title">Number of rooms</string>
    <string name="search_availability_chips_title">Availability</string>
    <string name="search_number_of_pictures_chips_title">Number of pictures</string>
    <string name="search_chip_manor">Manor</string>
    <string name="search_chip_apartment">Apartment</string>
    <string name="search_chip_house">House</string>
    <string name="search_chip_studio">Studio</string>
    <string name="search_chip_school">School</string>
    <string name="search_chip_restaurants">Restaurants</string>
    <string name="search_chip_playground">Playground</string>
    <string name="search_chip_cinema">Cinema</string>
    <string name="search_chip_shopping_area">Shopping Area</string>
    <string name="search_chip_supermarket">Supermarket</string>
    <string name="search_chip_number_of_rooms_or_pictures_one">1</string>
    <string name="search_chip_number_of_rooms_or_pictures_two">2</string>
    <string name="search_chip_number_of_rooms_or_pictures_three">3</string>
    <string name="search_chip_number_of_rooms_or_pictures_four">4</string>
    <string name="search_chip_number_of_rooms_or_pictures_five">5</string>
    <string name="search_chip_number_of_rooms_or_pictures_six">6</string>
    <string name="search_chip_number_of_rooms_or_pictures_seven">7</string>
    <string name="search_chip_number_of_rooms_or_pictures_eight">8</string>
    <string name="search_chip_number_of_rooms_or_pictures_nine">9</string>
    <string name="search_chip_number_of_rooms_or_pictures_ten">10</string>
    <string name="search_chip_number_of_rooms_or_pictures_eleven">11</string>
    <string name="search_chip_availability_available">Available</string>
    <string name="search_chip_availability_sold">Sold</string>
    <string name="search_date_picker_start_date">Start date :</string>
    <string name="search_date_picker_end_date">End date :</string>
    <string name="search_edit_text_city">City</string>
    <string name="search_material_button_text">Search</string>
    <string name="search_material_button_reset_filters_text">Reset</string>

    <!-- FRAGMENT MAP -->
    <string name="retry">Retry</string>
    <string name="no_connection_or_geolocation_data">No connection or geolocalisation data</string>

    <!-- CHOICE CURRENCY DIALOG FRAGMENT -->
    <string name="choose_your_currency">Choose your currency</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>

    <!-- NAVIGATION DRAWER -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- BOTTOMBAR/TOOLBAR MENU -->
    <string name="make_search_toolbar">MakeSearchIcon</string>
    <string name="currency_money_exchange_bottom_bar">CurrencyExchangeIcon</string>
    <string name="add_property_bottom_bar">AddProperty</string>

    <!-- PERMISSIONS -->
    <string name="camera_and_storage">Multiple permissions are required for the application to function fully</string>
    <string name="fine_and_coarse_location">Multiple permissions are required for the application to function fully</string>
    <string name="wifi_state">RealEstateManager needs to get acces to wifi state to function fully</string>

</resources>
