<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/school_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="0"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/restaurants_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="1"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/playground_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/playground"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="2"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/supermarket_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supermarket"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"/>

    <CheckBox
        android:id="@+id/shopping_area_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shopping_area"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="1"/>

    <CheckBox
        android:id="@+id/cinema_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cinema"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="2"/>

</GridLayout>