<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login_and_signup_activities"
    android:padding="@dimen/layout_login_padding">

    <androidx.cardview.widget.CardView
        android:id="@+id/log_in_activity_cardview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_login_height"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are"
            android:textStyle="bold"
            android:textColor="@color/variantNeutralColor"
            android:textSize="@dimen/cardview_title_text_size"
            android:paddingStart="@dimen/cardview_title_padding_start"
            android:layout_marginTop="@dimen/cardview_title_margin_top"
            android:layout_marginStart="@dimen/cardview_title_margin_start"/>

        <RadioGroup
            android:id="@+id/login_activity_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/radio_group_margin_top"
            android:paddingStart="@dimen/radio_group_padding_start"
            android:paddingEnd="@dimen/radio_group_padding_end"
            android:layout_marginEnd="@dimen/radio_group_margin_end"
            android:layout_marginStart="@dimen/radio_group_margin_start">

            <RadioButton
                android:id="@+id/agent_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agent"/>

            <RadioButton
                android:id="@+id/client_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client"/>

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edit_txt_email_agent_connection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_txt_login_email_password_height"
        app:layout_constraintTop_toBottomOf="@id/log_in_activity_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/edit_txt_login_email_password_margin_top"
        android:background="@drawable/edit_text_custom_authentication_activity"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/primaryLightColor"
        android:drawablePadding="@dimen/edit_txt_login_email_password_drawable_padding"
        android:paddingStart="@dimen/edit_txt_login_email_password_padding_start"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="@dimen/edit_txt_login_email_password_text_size"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_txt_password_agent_connection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_txt_login_email_password_height"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_email_agent_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/edit_txt_login_email_password_margin_top"
        android:background="@drawable/edit_text_custom_authentication_activity"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/primaryLightColor"
        android:drawablePadding="@dimen/edit_txt_login_email_password_drawable_padding"
        android:paddingStart="@dimen/edit_txt_login_email_password_padding_start"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="@dimen/edit_txt_login_email_password_text_size"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/material_btn_login_margin_bottom"
        android:textSize="@dimen/material_btn_login_text_size"
        android:text="@string/log_in"
        android:paddingStart="@dimen/material_btn_login_sign_up_padding_start"
        android:paddingEnd="@dimen/material_btn_login_sign_up_padding_end"
        android:shadowColor="@color/primaryDarkColor"
        style="@style/ThemeOverlay.Material3.Button.TonalButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_login_sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_already_log_in"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/neutralDarkColor"
        android:textStyle="bold"
        android:textSize="@dimen/material_btn_login_create_account_text_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>