<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_activity_choice_client_or_agent"
    tools:context=".ui.authentication.ChoiceClientOrAgentActivity">

    <TextView
        android:id="@+id/activity_choice_app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/neutralDarkColor"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/activity_choice_client_agent_material_toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@+id/activity_choice_app_name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:padding="15sp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_choice_btn_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_choice_btn_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agent"
            android:textSize="18sp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>