<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_property_place_informations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_type_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_type_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_rooms_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_rooms"
                app:layout_constraintStart_toEndOf="@+id/add_property_type_txtInput"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_rooms_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_price_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_property_rooms_txtInput"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_price_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_area_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                app:layout_constraintStart_toEndOf="@id/add_property_price_txtInput"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_area_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_street_number_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/street_number"
                app:layout_constraintTop_toBottomOf="@id/add_property_type_txtInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_street_number_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_street_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                app:layout_constraintTop_toBottomOf="@+id/add_property_price_txtInput"
                app:layout_constraintStart_toEndOf="@+id/add_property_street_number_txtInput"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_street_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_postal_code_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                app:layout_constraintTop_toBottomOf="@id/add_property_price_txtInput"
                app:layout_constraintStart_toEndOf="@id/add_property_street_txtInput"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_postal_code_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_city_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                app:layout_constraintTop_toBottomOf="@id/add_property_area_txtInput"
                app:layout_constraintStart_toEndOf="@id/add_property_postal_code_txtInput"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_city_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/add_property_cardview_amenities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_property_place_informations"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_small"
            android:elevation="5dp">

            <include
                layout="@layout/amenities_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_property_sold_or_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_property_cardview_amenities">

            <TextView
                android:id="@+id/add_property_txt_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_or_sold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:textSize="15sp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/add_property_switch_sold_or_available"
                android:layout_width="60dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                app:trackTint="@color/primaryLightColor"
                app:thumbTint="@color/primaryDarkColor"
                android:textOn="@string/switch_on"
                android:textOff="@string/switch_off"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_register_date_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/register_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_property_txt_available"
                android:layout_marginStart="55dp"
                android:layout_marginTop="35dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_register_date_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_property_sold_date_txtInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sold_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_property_switch_sold_or_available"
                android:layout_marginEnd="55dp"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/secondaryDarkColor"
                app:boxStrokeErrorColor="@color/onErrorColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_property_sold_date_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_property_add_pictures_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_property_sold_or_available">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_property_add_pictures_material_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/secondaryDarkColor"
                android:text="@string/add_pictures"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_property_pictures_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_property_add_pictures_material_btn"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_property_add_pictures_constraint_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <Spinner
                android:id="@+id/add_property_agent_spinner"
                android:layout_width="@dimen/add_agent_spinner_width"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:textSize="15sp"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/cancel_add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/add_property_agent_spinner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/onErrorColor"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/add_property"
                android:textSize="18sp"
                app:icon="@drawable/ic_add_property_circle_outline_white"
                app:iconGravity="start"
                android:textColor="@color/white"
                android:backgroundTint="@color/secondaryLightColor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>